--- a/team1.html
+++ b/team1.html
@@ -145,7 +145,7 @@
             <img src="https://frist-bucket-by-rahul.s3.ap-south-1.amazonaws.com/B612_20220709_155312_244.jpg" alt="Student">
             <h2>Rahul Bhera</h2>
             <p>Student Id: 250240325051</p>
-            <a <href="https://frist-bucket-by-rahul.s3.ap-south-1.amazonaws.com/rahul+resume..._1.jpg"> class="resume-button">Resume</a>
+            <a <href="https://frist-bucket-by-rahul.s3.ap-south-1.amazonaws.com/rahul+resume..._1.jpg" class="resume-button">Resume</a>
         </div>
         <div class="member">
             <img src="https://pvd123.s3.us-east-1.amazonaws.com/IMG_20250311_205639.jpg" alt="Student">
